Estructura de codigo

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -21,6 +19,34 @@
     "from scipy import interpolate\n",
     "from scipy.interpolate import griddata as gd\n",
     "from time import gmtime, strftime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame() #Declaracion del DataFrame\n",
+    "    for i in range (1, 6): #Ciclo donde se prosesan los 5 documentos\n",
+    "        datos = pd.read_csv('datos/{}/d{}.txt'.format(fecha, i)) #Almacenar dato correspondiente en datos\n",
+    "        #Se almacena cada una de las variables a utilizar\n",
+    "        df['Tpro{}'.format(i)] = datos['Tpro'.format(i)] \n",
+    "        df['Noch_fres{}'.format(i)] = (datos['Tmax'.format(i)] - datos['Tmin'.format(i)])\n",
+    "        df['Dpoint{}'.format(i)] = datos['Dpoint'.format(i)]\n",
+    "        #Estas variables solo se declaran para agregarlas al final del ciclo, ya que agregarlas 5 veces seria redundante porque tienen los\n",
+    "        #mismos valores\n",
+    "        Long, Lat, WprSoil10_40 = datos['Long'], datos['Lat'], datos['WprSoil10_40']\n",
+    "    df['Long'], df['Lat'] ,df['WprSoil10_40'] = Long, Lat, WprSoil10_40\n",
+    "    Long, Lat = np.array(df['Long']), np.array(df['Lat'])\n",
+    "    Long_min, Long_max, Lat_min, Lat_max = Long.min(), Long.max(), Lat.min(), Lat.max() #Valors minimos y maximos de Long y Lat (limites del mapeo)\n",
+    "    df = df.loc[df['WprSoil10_40'] <= 99] #Filtrado para solo mapear en el area de Tierra\n",
+    "    variables = ['Tpro','Dpoint','Noch_fres'] #Lista con las variables a utilizar\n",
+    "    for i in range (1,6): #Cliclo utilizado para crear 5 columnas (1 por cada filtro de variables), utilizando la funcion \"modelo\" para determinar que filas cumplen las condiciones\n",
+    "        df['d{}'.format(i)] = df.apply(lambda x:modelo(x['{}{}'.format(variables[0],i)],x['{}{}'.format(variables[1],i)],x['{}{}'.format(variables[2],i)]),axis=1)\n",
+    "    df['indice'] = df.apply(lambda x:indice(x['d1'],x['d2'],x['d3'],x['d4'],x['d5']),axis=1)"
    ]
   },
   {
