--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -62,8 +62,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = pd.DataFrame() #Declaracion del DataFrame\n",
@@ -86,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +286,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
